--- a/FRONT/netlify.toml
+++ b/FRONT/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-  base = "frontend"
-  publish = "frontend/build"
+  base = "FRONT"
+  publish = "FRONT/build"
   command = "npm install --legacy-peer-deps && npm run build"
