--- a/FRONT/netlify.toml
+++ b/FRONT/netlify.toml
@@ -1,4 +1,4 @@
 [build]
   base = "FRONT"
-  publish = "FRONT/dist"
+  publish = "FRONT"
   command = "npm install --legacy-peer-deps && npm run build"
